# Linux-System-Monitor

./: .gitignore  CMakeLists.txt  README.md  system_monitor
include/: cpu.h  mainwindow.h  memory.h  process.h
src/: cpu.cpp  display.cpp  main.cpp  mainwindow.cpp  memory.cpp  process.cpp
structure/: structure.txt
ui/: .gitignore  mainwindow.ui
